# listening-analysis

./: .gitignore  README.md  album.ipynb  analysis.ipynb  artist.ipynb  audio-features-prep.py  cache-transform.py  log.py  playlist-classifier.ipynb  playlist-nn.ipynb  playlist-svm.ipynb  playlist.ipynb  prep-audio-features.py  prep-scrobbles.py  pyproject.toml  requirements.txt  scrobble-prep.py  stats.ipynb  track.ipynb  uris.json
analysis/: __init__.py  cache.py  net.py  nn.py  query.py
analysis/prep/: feature.py  scrobble.py
